Fix cutoff color

--- a/resources/assets/sass/_custom.scss
+++ b/resources/assets/sass/_custom.scss
@@ -1293,7 +1293,7 @@ body.forgotresettoken {
 }
 
 .full-height {
-  height: 100vh !important;
+  min-height: 100vh !important;
 }
 
 .couponX {
